--- a/client/src/scenes/loginPage/LoginPage.module.scss
+++ b/client/src/scenes/loginPage/LoginPage.module.scss
@@ -1,11 +1,19 @@
 @import "../../styles/themify.scss";
 
-.login {
-	font-weight: bold;
-	font-size: clamp(1rem, 2rem, 2.25rem);
-	@include themify("color", "primary-main");
-	&:hover {
-		@include themify("color", "primary-light");
-		cursor: pointer;
+.loginPage {
+	&__name {
+		width: 100%;
+		@include themify("background-color", "bg-alt");
+		padding: 1rem;
+		text-align: center;
+		&_text {
+			@include themify("color", "primary-main");
+		}
+	}
+	&__description {
+		padding: 1rem;
+		margin: 1rem auto;
+		border-radius: 1.5rem;
+		@include themify("background-color", "bg-alt");
 	}
 }
