--- a/client/src/scenes/loginPage/FormComponent.module.scss
+++ b/client/src/scenes/loginPage/FormComponent.module.scss
@@ -5,16 +5,16 @@
 
 .form {
 	display: grid;
+
 	gap: 30px;
 	grid-template-columns: repeat(4, minmax(0, 1fr));
 	@include themify("color", "neutral-dark");
 	@include themify("border-color", "neutral-medium");
 
 	&__firstName {
-		@include themify("border-color", "neutral-dark");
-
 		grid-column: span 2;
 	}
+
 	&__lastName {
 		grid-column: span 2;
 	}
@@ -65,4 +65,60 @@
 			@include themify("color", "primary-light");
 		}
 	}
+}
+
+// ------ Загальне для інпутів -------
+.form__input_group {
+	position: relative;
+	grid-column: span 4;
+	width: 100%; /* Додали властивість width зі значенням 100% */
+}
+
+.form__input {
+	padding: 10px;
+	border: none;
+	border-radius: 4px;
+	font: inherit;
+	@include themify("color", "neutral-dark");
+	background-color: transparent;
+	outline: 1.5px;
+	@include themify("outline-color", "neutral-dark");
+	outline-style: solid;
+	width: 100%; /* Додали властивість width зі значенням 100% */
+
+	box-sizing: border-box; /* Додали властивість box-sizing зі значенням border-box для коректного розрахунку ширини */
+}
+
+.form__label {
+	position: absolute;
+	top: 0;
+	left: 0;
+	transform: translate(10px, 10px);
+	transition: transform 0.25s;
+}
+
+.form__input:focus + .form__label,
+.form__input:valid + .form__label {
+	transform: translate(10px, -14px) scale(0.8);
+	@include themify("color", "primary-main");
+	padding-inline: 5px;
+	@include themify("background-color", "bg-alt");
+}
+
+.form__input:is(:focus, :valid) {
+	@include themify("outline-color", "primary-main");
+}
+
+.form__input.form__input_error {
+	outline-color: red;
+}
+
+.form__label.form__lable_error {
+	color: red;
+}
+
+.form__error {
+	color: red;
+	font-size: 14px;
+	margin-top: 5px;
 }
