fix routes in app.js

--- a/client/src/components/layout/Layout.scss
+++ b/client/src/components/layout/Layout.scss
@@ -2,3 +2,4 @@
 @import "../../scenes/loginPage/LoginPage.module.scss";
 @import "../../scenes/navbar/Navbar.module.scss";
 @import "../../scenes/loginPage/FormComponent.module.scss";
+@import "../../index.scss";
