--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -1,10 +1,11 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&display=swap");
+@import "./styles/themify.scss";
 
 html,
 body,
-#root,
-.app {
+#root {
 	height: 100%;
 	width: 100%;
 	font-family: "Montserrat", sans-serif;
+	@include themify("background-color", "bg-default");
 }
