--- a/client/src/components/layout/Layout.scss
+++ b/client/src/components/layout/Layout.scss
@@ -3,3 +3,5 @@
 @import "../../scenes/navbar/Navbar.module.scss";
 @import "../../scenes/loginPage/FormComponent.module.scss";
 @import "../../index.scss";
+@import "../../scenes/widgets/userWidget/UserWidget.module.scss";
+@import "../../components/widgetWrapper/WidgetWrapper.module.scss";
