--- a/client/src/components/layout/Layout.scss
+++ b/client/src/components/layout/Layout.scss
@@ -4,4 +4,5 @@
 @import "../../scenes/loginPage/FormComponent.module.scss";
 @import "../../index.scss";
 @import "../../scenes/widgets/userWidget/UserWidget.module.scss";
+@import "../../scenes/widgets/myPostWidget/MyPostWidget.module.scss";
 @import "../../components/widgetWrapper/WidgetWrapper.module.scss";
